--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>product-service</name>
 	<description>Product Service</description>
 	<properties>
-		<revision>1.0.0-SNAPSHOT</revision>
+		<revision>dev-SNAPSHOT</revision>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
@@ -61,6 +61,14 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<distributionManagement>
+		<repository>
+			<id>mangelt-org-mangelt-repo</id>
+			<name>mangelt-org-mangelt-repo</name>
+			<url>https://mangelt-org-941855257042.d.codeartifact.us-east-1.amazonaws.com/maven/mangelt-repo/</url>
+		</repository>
+	</distributionManagement>
 
 
 	<build>
