--- a/.github/workflows/building-testing-workflow-file.yml
+++ b/.github/workflows/building-testing-workflow-file.yml
@@ -3,10 +3,14 @@ run-name: ${{ github.actor }} has pushed a change.
 on:
   push
 
+env:
+  AWS_REGION: us-east-1
+  ECR_REPOSITORY: product-service
+
 jobs:
   mvn-build:
     runs-on: ubuntu-latest
-    name: mvn build
+    name: Build_Test_Push
     steps:
       - uses: actions/checkout@v2
       - name: Set up jdk 17
@@ -17,4 +21,25 @@ jobs:
           cache: 'maven'
       - name: Build maven
         run: |
-          mvn clean package -Drevision=$(git rev-parse --short HEAD)
+          mvn clean package -Drevision=$( git rev-parse --short HEAD )
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@0e613a0980cbf65ed5b322eb7a1e075d28913a83
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@62f4f872db3836360b72999f4b87f1ff13310f3a
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be deployed to Elastic Beantalk.
+          export IMAGE_TAG=$(git rev-parse --short HEAD)
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg JAR_NAME=product-service-$IMAGE_TAG.jar
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
