--- a/.github/workflows/building-testing-workflow-file.yml
+++ b/.github/workflows/building-testing-workflow-file.yml
@@ -1,15 +1,15 @@
-name: build-and-test-changes
-run-name: ${{ github.actor }} has pushed a change.
+name: build-test_deploy-changes
+run-name: ${{ github.actor }} has trigger the job.
 on:
-  push
+  workflow_dispatch
 
 env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: product-service
   FOLDER_NAME: tmp
-  BUCKET_NAME: elasticbeanstalk-us-east-1-941855257042
-  APPLICATION_NAME: Product-Service-dev
-  APPLICATION_ENV_NAME: Product-Service-dev-env
+  BUCKET_NAME: ${{ vars.PRODUCT_SERVICE_BUCKET_NAME }}
+  APPLICATION_NAME: ${{ vars.PRODUCT_SERVICE_APP_NAME }}
+  APPLICATION_ENV_NAME: ${{ vars.PRODUCT_SERVICE_ENV_NAME }}
   ZIP_NAME: deployment_package.zip
 
 jobs:
@@ -51,6 +51,14 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $dev_image
           echo "tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+      - name: Replace wildcards for container definition
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          URI="s/PRODUCT_SERVICE_URI/$ECR_REGISTRY\/$ECR_REPOSITORY:dev/g"
+          echo "URI: $URI"
+          echo $(sed $URI ./Dockerrun.aws.json) > ./Dockerrun.aws.json
+          cat ./Dockerrun.aws.json
       - name: Create ZIP deployment package
         run: zip -r deployment_package.zip ./Dockerrun.aws.json
       - name: Upload deployment package to S3
